j-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: jenkins
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: j-app
  template:
    metadata:
      labels:
        app: j-app
    spec:
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts-jdk17
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: jenkins-data
      volumes:
      - name: jenkins-data
        persistentVolumeClaim: 
          claimName: jenkins-pvc
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
