jenkins-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: jenkins
  name: jenkins
spec:
  replicas: 2
  selector:
    matchLabels:
      app: j-app
  template:
    metadata:
      labels:
        app: j-app
    spec:
      containers:
      - name: jenkins
        image: jenkins/jenkins
        ports:
        - containerPort: 8080
