j-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: j-svc
  namespace: jenkins
spec:
  selector:
    app: j-app
  ports:
  - port: 8080
    targetPort: 8080
