j-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: j-ing
  namespace: jenkins
  annotatioons:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: gvdganesh.info
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: j-svc
            port: 
              number: 8080
